feat: Introduce User and Task request/response DTOs with validation, update controllers and services for new DTOs