@@ -1,7 +1,7 @@
 package com.example.taskapi.service;
 
-import com.example.taskapi.dto.TaskRequestDTO;
-import com.example.taskapi.dto.TaskResponseDTO;
+import com.example.taskapi.dto.TaskRequest;
+import com.example.taskapi.dto.TaskResponse;
 import com.example.taskapi.exception.ResourceNotFoundException;
 import com.example.taskapi.mapper.TaskMapper;
 import com.example.taskapi.model.Task;
@@ -15,29 +15,24 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 
 @Service
 public class TaskService {
 
-    // In-memory storage for Phase 1. Replaced with PostgreSQL in Phase 2.
-    // Think of this like a temporary "database" — similar to Django's
-    // in-memory SQLite for tests.
-
     private final TaskRepository taskRepository;
     private final UserRepository userRepository;
-    @Autowired
     private final TaskMapper taskMapper;
 
     // constructor
+    @Autowired
     public TaskService(TaskRepository taskRepository, UserRepository userRepository, TaskMapper taskMapper) {
         this.taskRepository = taskRepository;
         this.userRepository = userRepository;
         this.taskMapper = taskMapper;
     }
 
-    public TaskResponseDTO createTask(TaskRequestDTO task) {
+    public TaskResponse createTask(TaskRequest task) {
         Task taskEntity = taskMapper.toEntity(task);
         Long userId = taskEntity.getUser() != null ? taskEntity.getUser().getId() : null;
         if (userId == null) {
@@ -46,63 +41,56 @@ public class TaskService {
             return taskMapper.toDTO(taskRepository.save(taskEntity));
         }
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found: " + userId));
+                .orElseThrow(() -> new ResourceNotFoundException("User not found: " + userId));
         taskEntity.setUser(user);
         return taskMapper.toDTO(taskRepository.save(taskEntity));
     }
 
-    public List<TaskResponseDTO> getAllTasks() {
+    public List<TaskResponse> getAllTasks() {
         return taskRepository.findAll()
                 .stream().map(taskMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public Optional<TaskResponseDTO> getTaskById(Long id) {
+    public TaskResponse getTaskById(Long id) {
 
-        return taskRepository.findById(id).map(taskMapper::toDTO);
+        return taskRepository.findById(id).map(taskMapper::toDTO).orElseThrow(() -> new ResourceNotFoundException("task id not found"));
     }
 
-    public Optional<TaskResponseDTO> updateTask(Long id, TaskRequestDTO updatedTask) {
+    @Transactional
+    public TaskResponse updateTask(Long id, TaskRequest updatedTask) {
         //find the task id first
-        Task foundTask = taskRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Id not found"));
-        // then convert the dtoRequest into entity shape
-        Task updatedTaskEntity = taskMapper.toEntity(updatedTask);
-        // then update entity
-        // then update
-        // convert into dtoResponse shape
-        // then return it
-        return Optional.of(taskRepository.save(updatedTaskEntity)).map(taskMapper::toDTO);
+        Task task = taskRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Task Id not found"));
+        taskMapper.updateEntityFromDto(updatedTask, task);
+        return taskMapper.toDTO(task);
     }
 
 
     public boolean deleteTask(Long id) {
-        try {
-            taskRepository.deleteById(id);
-            return true;
-        } catch (Exception e) {
-            return false;
-        }
+        taskRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Task Id not found."));
+        taskRepository.deleteById(id);
+        return true;
     }
 
     @Transactional
-    public Optional<TaskResponseDTO> assignTaskToUser(Long id, Long userId) {
+    public Optional<TaskResponse> assignTaskToUser(Long id, Long userId) {
         Task assignedTask = taskRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Task not found with id: " + id));
         User assignedUser = userRepository.findById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + userId));
-
         assignedTask.setUser(assignedUser);
-
         return Optional.of(taskRepository.save(assignedTask)).map(taskMapper::toDTO);
     }
 
     //find task by status function using query method
-    //@Query("select * from tasks where taskstatus == status")
-    public List<TaskResponseDTO> findTasksByStatus(TaskStatus status) {
-        return taskRepository.findAllByStatus(status).stream().map(taskMapper::toDTO).toList();
+    public List<TaskResponse> findTasksByStatus(String status) {
+        return taskRepository.findAllByStatus(TaskStatus.valueOf(status))
+                .stream().map(taskMapper::toDTO).toList();
     }
 
-    public List<TaskResponseDTO> findTaskByTitle(String title) {
+    public List<TaskResponse> findTaskByTitle(String title) {
         return taskRepository.findByTitleContainingIgnoreCase(title)
                 .stream().map(taskMapper::toDTO).toList();
     }
